fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ body {
 @media (max-width: 480px) {
   .view-header-container {
     flex-direction: column;
-    align-items: center;
+    align-items: baseline;
+    margin-bottom: 1rem;
   }
 }
